--- a/ios/VaultTemp/Info.plist
+++ b/ios/VaultTemp/Info.plist
@@ -37,6 +37,12 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take photos of items</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to select item photos</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>We need access to save photos to your photo library</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
