Added google login, add item manually, listing of items, delete items, profile update

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -44,7 +44,9 @@ newArchEnabled=false
 hermesEnabled=true
 
 # Java toolchain version
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/adoptopenjdk-11.jdk/Contents/Home
+# React Native Firebase requires JVM 17 or 21
+# Using Java 17 from Homebrew
+org.gradle.java.home=/usr/local/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
 
 # Disable AAR metadata checks to work around dependency version mismatches
 android.disableAutomaticComponentCreation=true
