--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,7 +5,7 @@ require Pod::Executable.execute_command('node', ['-p',
     {paths: [process.argv[1]]},
   )', __dir__]).strip
 
-platform :ios, min_ios_version_supported
+platform :ios, '15.0'
 prepare_react_native_project!
 
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
@@ -19,11 +19,9 @@ prepare_react_native_project!
 # ```
 flipper_config = FlipperConfiguration.disabled
 
-linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
-  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
-end
+# Use static frameworks for React Native Firebase compatibility
+# This is required for Firebase to work properly with React Native
+use_frameworks! :linkage => :static
 
 target 'VaultTemp' do
   config = use_native_modules!
@@ -51,10 +49,39 @@ target 'VaultTemp' do
   end
 
   post_install do |installer|
+    # Fix for gRPC module map issue
+    require 'fileutils'
+    grpc_headers_dir = File.join(installer.sandbox.root, 'Headers/Private/grpc')
+    grpc_modulemap_src = File.join(installer.sandbox.root, 'Target Support Files/gRPC-Core/gRPC-Core.modulemap')
+    grpc_modulemap_dst = File.join(grpc_headers_dir, 'gRPC-Core.modulemap')
+    
+    if File.exist?(grpc_modulemap_src)
+      FileUtils.mkdir_p(grpc_headers_dir)
+      FileUtils.cp(grpc_modulemap_src, grpc_modulemap_dst)
+    end
+    
     installer.pods_project.targets.each do |target|
-        target.build_configurations.each do |config|
-          config.build_settings['CLANG_CXX_LANGUAGE_STANDARD'] = 'c++17'
+      target.build_configurations.each do |config|
+        config.build_settings['CLANG_CXX_LANGUAGE_STANDARD'] = 'c++17'
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+        
+        # Fix for non-modular header errors with use_frameworks!
+        # Allow non-modular includes for React Native and related pods
+        if target.name.include?('React') || target.name.include?('RCT') || target.name.include?('react-native')
+          config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
         end
+        
+        # Fix for react-native-image-picker
+        if target.name == 'react-native-image-picker'
+          config.build_settings['CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES'] = 'YES'
+        end
+        
+        # Fix for Firebase Swift compatibility
+        if target.name.include?('Firebase') || target.name.include?('RNFB')
+          config.build_settings['SWIFT_VERSION'] = '5.0'
+          config.build_settings['DEFINES_MODULE'] = 'YES'
+        end
+      end
     end
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
