--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.3.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/auth": "^23.5.0",
     "@react-native-firebase/firestore": "^23.5.0",
     "@react-native-firebase/storage": "^23.5.0",
     "@react-native-google-signin/google-signin": "^12.1.0",
+    "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "ajv": "^8.17.1",
@@ -30,8 +33,8 @@
     "react-native-gesture-handler": "^2.13.4",
     "react-native-image-picker": "^5.6.0",
     "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "3.4.1",
-    "react-native-screens": "^3.18.0",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^3.29.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-vision-camera": "^3.6.8",
