--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "^23.5.0",
     "@react-native-firebase/auth": "^23.5.0",
     "@react-native-firebase/firestore": "^23.5.0",
+    "@react-native-firebase/functions": "^23.5.0",
     "@react-native-firebase/storage": "^23.5.0",
     "@react-native-google-signin/google-signin": "^12.1.0",
     "@react-native-picker/picker": "^2.11.4",
@@ -30,6 +31,8 @@
     "react-native": "0.72.6",
     "react-native-barcode-mask": "^1.1.1",
     "react-native-document-picker": "^9.1.1",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-image-picker": "^5.6.0",
     "react-native-reanimated": "^2.14.4",
