--- a/functions/package.json
+++ b/functions/package.json
@@ -13,10 +13,13 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
-    "nodemailer": "^7.0.10"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
+    "openai": "^6.9.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
