--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "react-native start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.3.0",
@@ -41,7 +42,8 @@
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-vision-camera": "^3.6.8",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "react-native-worklets-core": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
@@ -61,6 +63,8 @@
     "html-webpack-plugin": "^5.6.4",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.2.2",
