--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,7 +10,16 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Kotlin daemon JVM arguments
+kotlin.daemon.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+
+# Enable Kotlin incremental compilation
+kotlin.incremental=true
+kotlin.incremental.multiplatform=true
+kotlin.incremental.js=true
+kotlin.incremental.js.ir=true
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -46,8 +55,10 @@ hermesEnabled=true
 # Java toolchain version
 # React Native Firebase requires JVM 17 or 21
 # Using Java 17 from Homebrew
-org.gradle.java.home=/usr/local/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
+# org.gradle.java.home=/usr/local/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
 
 # Disable AAR metadata checks to work around dependency version mismatches
-android.disableAutomaticComponentCreation=true
-
+# android.disableAutomaticComponentCreation=true
+android.compileSdk=34
+org.gradle.java.home=/usr/local/Cellar/openjdk@17/17.0.17/libexec/openjdk.jdk/Contents/Home
+kotlin.jvm.target.validation.mode=ignore
