--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,6 +80,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+    }
+    buildFeatures {
+        buildConfig = true  
     }
     signingConfigs {
         debug {
@@ -92,6 +96,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            minifyEnabled false // Disable minification for debug to avoid class removal issues
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -105,6 +110,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
+    // kotlinOptions {
+    //     jvmTarget = "17"
+    // }
+   
     
     configurations.all {
         resolutionStrategy {
@@ -112,6 +122,8 @@ android {
             force 'androidx.core:core-ktx:1.10.1'
             force 'androidx.appcompat:appcompat:1.6.1'
             force 'androidx.appcompat:appcompat-resources:1.6.1'
+            force 'androidx.credentials:credentials:1.2.0'
+            force 'androidx.credentials:credentials-play-services-auth:1.2.0'
         }
     }
 }
@@ -119,6 +131,15 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation("androidx.credentials:credentials:1.2.0")
+    implementation("androidx.credentials:credentials-play-services-auth:1.2.0")
+    
+    // Required for Firebase Firestore (updated version for compatibility)
+    // Using 1.2.0 for better compatibility with Firebase 26.0.2+
+    implementation("androidx.datastore:datastore-preferences:1.2.0")
+    
+    // Multidex support
+    implementation("androidx.multidex:multidex:2.0.1")
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
@@ -140,7 +161,7 @@ apply plugin: 'com.google.gms.google-services'
 // Set Kotlin JVM target to match Java for this project
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "17"
     }
 }
 
