--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ajv": "^8.17.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.73.11",
     "react-native-barcode-mask": "^1.1.1",
     "react-native-document-picker": "^9.1.1",
     "react-native-file-viewer": "^2.1.5",
@@ -37,7 +37,7 @@
     "react-native-gesture-handler": "^2.13.4",
     "react-native-image-picker": "^5.6.0",
     "react-native-reanimated": "^2.14.4",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.2",
