working on barcode scanner

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -53,3 +53,4 @@ hermesEnabled=true
 android.compileSdk=34
 org.gradle.java.home=/usr/local/Cellar/openjdk@17/17.0.17/libexec/openjdk.jdk/Contents/Home
 kotlin.jvm.target.validation.mode=ignore
+VISION_CAMERA_ENABLE_FRAME_PROCESSORS=false
