--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "react-native start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "postinstall": "patch-package"
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.3.0",
@@ -34,16 +33,15 @@
     "react-native-document-picker": "^9.1.1",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.13.4",
+    "react-native-gesture-handler": "2.14.1",
     "react-native-image-picker": "^5.6.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
+    "react-native-screens": "3.29.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-vision-camera": "^3.6.8",
-    "react-native-web": "^0.19.10",
-    "react-native-worklets-core": "^1.6.2"
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
