Working on lookupbarcode

--- a/firebase.json
+++ b/firebase.json
@@ -11,5 +11,17 @@
       ],
       "source": "functions"
     }
-  ]
+  ],
+  "emulators": {
+    "functions": {
+      "port": 5001
+    },
+    "ui": {
+      "enabled": true,
+      "port": 4000
+    },
+    "firestore": {
+      "port": 8080
+    }
+  }
 }
