--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,12 +10,13 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -54,3 +55,8 @@ android.compileSdk=34
 org.gradle.java.home=/usr/local/Cellar/openjdk@17/17.0.17/libexec/openjdk.jdk/Contents/Home
 kotlin.jvm.target.validation.mode=ignore
 VISION_CAMERA_ENABLE_FRAME_PROCESSORS=false
+org.gradle.daemon=false
+# org.gradle.configureondemand=false
+
+# Kotlin
+kotlin.daemon.jvm.options=-Xmx2048m
