--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,10 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
 rootProject.name = 'Vaulted'
 
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
