--- a/firebase.json
+++ b/firebase.json
@@ -14,9 +14,11 @@
   ],
   "emulators": {
     "functions": {
+      "host": "0.0.0.0",
       "port": 5001
     },
     "ui": {
+      "host": "0.0.0.0",
       "enabled": true,
       "port": 4000
     },
