--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,7 +89,8 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
+            // storeFile file('debug.keystore')
+            storeFile file("${System.getProperty("user.home")}/.android/debug.keystore")
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
