Working on Apple signin

--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>872715867979-r9b7b05lutnkblrstufbrh00aaqehgb8.apps.googleusercontent.com</string>
+	<string>872715867979-gqmqscns9e54q6e345p4fvp3tvehecn8.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.872715867979-r9b7b05lutnkblrstufbrh00aaqehgb8</string>
+	<string>com.googleusercontent.apps.872715867979-gqmqscns9e54q6e345p4fvp3tvehecn8</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>872715867979-5i6op4dhpp1eo24lniiooms21b57c4su.apps.googleusercontent.com</string>
+	<string>872715867979-0n95d618b0gbgtmrn9eb0cnl6am8uh6o.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBLGJ_j7nHtgen_hAz0SQxX0NSriLwUoA8</string>
 	<key>GCM_SENDER_ID</key>
@@ -15,23 +15,23 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.vault.dev</string>
+	<string>com.vaulted.dev</string>
 	<key>PROJECT_ID</key>
 	<string>dev-vaultapp</string>
 	<key>STORAGE_BUCKET</key>
 	<string>dev-vaultapp.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:872715867979:ios:5a876d48f392bdf0db7ace</string>
+	<string>1:872715867979:ios:1dbb6d8d4ec904efdb7ace</string>
 	<key>DATABASE_URL</key>
 	<string>https://dev-vaultapp-default-rtdb.firebaseio.com</string>
 </dict>
