--- a/functions/.env.example
+++ b/functions/.env.example
@@ -1,10 +1,14 @@
 # BarcodeSpider API Token
 # Get your token from: https://www.barcodespider.com/
-BARCODE_SPIDER_TOKEN=6b59f838834aeb34de33
+BARCODE_SPIDER_TOKEN=your_barcodespider_token_here
 
 # OpenAI API Key (for image analysis)
 OPENAI_API_KEY=your_openai_api_key_here
 
 # SMTP Credentials (for email exports)
+# Note: For Gmail SMTP, you need to:
+# 1. Enable 2-factor authentication on your Google account
+# 2. Generate an App Password at https://myaccount.google.com/apppasswords
+# 3. Use the App Password (not your regular Gmail password) as SMTP_PASS
 SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_app_password_here
+SMTP_PASS=your_gmail_app_password_here
