--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "3.29.0",
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.2",
+    "react-native-video": "^6.19.0",
     "react-native-vision-camera": "^3.6.8",
     "react-native-web": "^0.19.10"
   },
